--- a/_head.html
+++ b/_head.html
@@ -1,3 +1,7 @@
+
+<html>
+    
+    <head>
 <script>
     var _hmt = _hmt || [];
     (function() {
@@ -7,3 +11,7 @@
         s.parentNode.insertBefore(hm, s);
     })();
 </script>
+</head>
+
+
+</html>
