--- a/test.html
+++ b/test.html
@@ -22,11 +22,20 @@
 <a href="test.html"> mygithub.io</a>
 
 <div>
+    <label>外部链接测试</label>
+    <a href="www.baidu.com">百度</a>
 
-    1一次坐公交，一位漂亮MM上了车，掏出了卡来刷卡，只听刷卡机回复：滴～老人卡～！全车人冻住，皆而望她。她一脸黑线说：看什么，天山童老，没见过啊？一大爷起身，说：来，大娘，您坐这。
-    2.小明掏口袋的时候，一把钥匙掉了，当时没有发现，后来回去找！在路边有对小情侣在那里，男的突然激动的说：是谁的？到底是谁的？小明连忙说：我的，我的，是我的！后来小明才知道，原来是那女的怀孕了~
-    3.有一天，两姐妹在睡觉 妹妹对姐姐说：姐今天蚊子好多哦～ 姐姐说：把灯关了蚊子就看不到我们了 后来妹妹真的把灯关了 忽然间一双萤火虫飞了进来 妹妹很紧张的说：姐惨了，蚊子提着灯笼来找我们了……
+</div>
 
+<div>
+    <label>带参数测试url</label>
+    <a href="param.html">点击这里</a>
+</div>
+
+<div>
+    <br>1.一次坐公交，一位漂亮MM上了车，掏出了卡来刷卡，只听刷卡机回复：滴～老人卡～！全车人冻住，皆而望她。她一脸黑线说：看什么，天山童老，没见过啊？一大爷起身，说：来，大娘，您坐这。
+    <br>2.小明掏口袋的时候，一把钥匙掉了，当时没有发现，后来回去找！在路边有对小情侣在那里，男的突然激动的说：是谁的？到底是谁的？小明连忙说：我的，我的，是我的！后来小明才知道，原来是那女的怀孕了~
+    <br>3.有一天，两姐妹在睡觉 妹妹对姐姐说：姐今天蚊子好多哦～ 姐姐说：把灯关了蚊子就看不到我们了 后来妹妹真的把灯关了 忽然间一双萤火虫飞了进来 妹妹很紧张的说：姐惨了，蚊子提着灯笼来找我们了…
 </div>
 
 </body>
