--- a/test.html
+++ b/test.html
@@ -33,10 +33,30 @@
 </div>
 
 <div>
+    <label>页面转化率模块，示例：您网站的“付款成功”页面、“注册成功”页面等任何您希望访客进入的页面，作为用户转化率</label>
+
+    <a href="login.html">登陆</a>
+    <a href="registry.html">注册</a>
+</div>
+
+<div>
     <br>1.一次坐公交，一位漂亮MM上了车，掏出了卡来刷卡，只听刷卡机回复：滴～老人卡～！全车人冻住，皆而望她。她一脸黑线说：看什么，天山童老，没见过啊？一大爷起身，说：来，大娘，您坐这。
     <br>2.小明掏口袋的时候，一把钥匙掉了，当时没有发现，后来回去找！在路边有对小情侣在那里，男的突然激动的说：是谁的？到底是谁的？小明连忙说：我的，我的，是我的！后来小明才知道，原来是那女的怀孕了~
     <br>3.有一天，两姐妹在睡觉 妹妹对姐姐说：姐今天蚊子好多哦～ 姐姐说：把灯关了蚊子就看不到我们了 后来妹妹真的把灯关了 忽然间一双萤火虫飞了进来 妹妹很紧张的说：姐惨了，蚊子提着灯笼来找我们了…
 </div>
+
+
+<div>
+    <label>加载美图模块</label>
+    <img src="http://imgsrc.baidu.com/forum/pic/item/6a8b4710b912c8fc694fc02ff9039245d7882197.jpg">
+    <img src="http://imgsrc.baidu.com/forum/pic/item/01d8bc3eb13533fa9665d9b1add3fd1f40345b59.jpg">
+</div>
+
+<div>
+    <label>加载js 模块</label>
+    <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
+</div>
+
 
 </body>
 </html>
