--- a/test.html
+++ b/test.html
@@ -48,8 +48,7 @@
 
 <div>
     <label>加载美图模块</label>
-    <img src="http://imgsrc.baidu.com/forum/pic/item/6a8b4710b912c8fc694fc02ff9039245d7882197.jpg">
-    <img src="http://imgsrc.baidu.com/forum/pic/item/01d8bc3eb13533fa9665d9b1add3fd1f40345b59.jpg">
+    <img src="http://pic.nipic.com/2008-05-07/20085722191339_2.jpg">
 </div>
 
 <div>
