--- a/head.html
+++ b/head.html
@@ -20,3 +20,6 @@
     ga('send', 'pageview');
 
 </script>
+
+<script src="thickbox/thickbox.js"></script>
+<link type="text/css" href="thickbox/thickbox.css" />
