--- a/test.html
+++ b/test.html
@@ -23,7 +23,7 @@
 
 <div>
     <label>外部链接测试</label>
-    <a href="www.baidu.com">百度</a>
+    <a href="http://www.baidu.com" target="_blank">百度跳转</a>
 
 </div>
 
@@ -45,14 +45,27 @@
     <br>3.有一天，两姐妹在睡觉 妹妹对姐姐说：姐今天蚊子好多哦～ 姐姐说：把灯关了蚊子就看不到我们了 后来妹妹真的把灯关了 忽然间一双萤火虫飞了进来 妹妹很紧张的说：姐惨了，蚊子提着灯笼来找我们了…
 </div>
 
+<div>
+    <label>自定义事件测试</label>
+    <div>
+        <a href="trackPageView.html">_trackPageView(页面跟踪)</a>
+        <a href="trackEvent.html">_trackEvent(事件跟踪)</a>
+        <a href="setCustomVar.html">_setCustomVar(自定义变量)</a>
+        <a href="setAccount.html">_setAccount（指定加载hm.js）</a>
+        <a href="setAutoPageView.html">_setAutoPageView(是否自动记录页面Pv)</a>
+    </div>
+</div>
+
 
 <div>
     <label>加载美图模块</label>
+    <br>
     <img src="http://pic.nipic.com/2008-05-07/20085722191339_2.jpg">
 </div>
 
 <div>
     <label>加载js 模块</label>
+    <br>
     <script src="http://code.jquery.com/jquery-1.9.0.js"></script>
 </div>
 
