--- a/setAutoPageView.html
+++ b/setAutoPageView.html
@@ -5,7 +5,7 @@
     <link rel="import" href="head.html">
     <script>
 
-        _hmt.push(['_setAccount', '70477fb289a53c702883b8cd1465ea2a']);
+        _hmt.push(['_setAutoPageView', false]);
     </script>
 </head>
 <body>
