--- a/head.html
+++ b/head.html
@@ -2,6 +2,7 @@
 
 
 <script src="thickbox/thickbox.js"></script>
+<script src="thickbox/jquery1.7.1.min.js"></script>
 <link type="text/css" href="thickbox/thickbox.css" />
 
 <script>
